objects/Account.object
<CustomObject>
    <fields>
        <fullName>CMI_Urgent_Fault_Notification__c</fullName>
        <label>Urgent Fault Notification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Saucon TDS Fault Code Response Interface</fullName>
                </value>
                <value>
                    <fullName>OnCommand</fullName>
                </value>
                <value>
                    <fullName>No System</fullName>
                    <default>true</default>
                    <label>No System</label>
                </value>
                <value>
                    <fullName>Equitel&apos;s Response system</fullName>
                    <isActive>false</isActive>
                    <label>Equitel&apos;s Response system</label>
                </value>
                <value>
                    <fullName>FWTelematics Portal</fullName>
                    <isActive>false</isActive>
                    <label>FWTelematics Portal</label>
                </value>
                <value>
                    <fullName>Galaxy Telematics</fullName>
                    <isActive>false</isActive>
                    <label>Galaxy Telematics</label>
                </value>
                <value>
                    <fullName>LHP Telematics system</fullName>
                    <isActive>false</isActive>
                    <label>LHP Telematics system</label>
                </value>
                <value>
                    <fullName>Other Customer System</fullName>
                    <isActive>false</isActive>
                    <label>Other Customer System</label>
                </value>
                <value>
                    <fullName>PCI System</fullName>
                    <isActive>false</isActive>
                    <label>PCI System</label>
                </value>
                <value>
                    <fullName>RoadAdvisor System</fullName>
                    <isActive>false</isActive>
                    <label>RoadAdvisor System</label>
                </value>
                <value>
                    <fullName>Saucon System</fullName>
                    <isActive>false</isActive>
                    <label>Saucon System</label>
                </value>
                <value>
                    <fullName>Tata Fleetman</fullName>
                    <isActive>false</isActive>
                    <label>Tata Fleetman</label>
                </value>
                <value>
                    <fullName>TecnoMotum system</fullName>
                    <isActive>false</isActive>
                    <label>TecnoMotum system</label>
                </value>
                <value>
                    <fullName>Witronix</fullName>
                    <isActive>false</isActive>
                    <label>Witronix</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMI_UserRegister_Link__c</fullName>
        <formula>$Label.CMI_UserRegister_Link</formula>
        <label>CMI_UserRegister_Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMI_signedByEmail__c</fullName>
        <label>Agreement_SignedByEmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CMI_signedByTitle__c</fullName>
        <label>Agreement_SignedByTitle</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMI_signedBy__c</fullName>
        <label>Agreement_SignedBy</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMI_signedOn__c</fullName>
        <label>Agreement_SignedOn</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_DBCode__c</fullName>
        <description>DistributorBranchCode stores the 5 digit valueof the Distributor</description>
        <label>Distributor Branch Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_DE_Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CSS_DE_Parent</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>WWSPS</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>IAM</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CSS_DE_Parent</relationshipLabel>
        <relationshipName>CSS_DE_Parent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CSS_DealerCode__c</fullName>
        <description>DealerCode stores the 5 digit valueof the Dealer</description>
        <label>Dealer Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_DistributorCode__c</fullName>
        <defaultValue>$User.IAM_Distributorcode__c</defaultValue>
        <description>DistributorCode stores the 5 digit valueof the Distributor</description>
        <label>Distributor Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_EmailEncoding__c</fullName>
        <description>Holds the Email format for creating user through JIT Provisioning</description>
        <label>Email Encoding</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unicode (UTF-8)</fullName>
                </value>
                <value>
                    <fullName>General US &amp; Western Europe (ISO-8859-1, ISO-LATIN-1)</fullName>
                    <default>true</default>
                    <label>General US &amp; Western Europe (ISO-8859-1, ISO-LATIN-1)</label>
                </value>
                <value>
                    <fullName>Japanese (Shift-JIS)</fullName>
                </value>
                <value>
                    <fullName>Japanese (JIS)</fullName>
                </value>
                <value>
                    <fullName>Japanese (EUC)</fullName>
                </value>
                <value>
                    <fullName>Korean (ks_c_5601-1987)</fullName>
                </value>
                <value>
                    <fullName>Traditional Chinese (Big5)</fullName>
                </value>
                <value>
                    <fullName>Simplified Chinese (GB2312)</fullName>
                </value>
                <value>
                    <fullName>Traditional Chinese Hong Kong (Big5-HKSCS)</fullName>
                </value>
                <value>
                    <fullName>Japanese (Shift-JIS_2004)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSS_FleetCode__c</fullName>
        <description>Desc: This is field is used to store the fleet code of CIHR users.</description>
        <label>Fleet Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_Language__c</fullName>
        <description>Stores the user language in the account Object</description>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                    <default>true</default>
                    <label>English</label>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Swedish</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Chinese (Traditional)</fullName>
                </value>
                <value>
                    <fullName>Chinese (Simplified)</fullName>
                </value>
                <value>
                    <fullName>Portuguese (Brazilian)</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>Danish</fullName>
                </value>
                <value>
                    <fullName>Thai</fullName>
                </value>
                <value>
                    <fullName>Finnish</fullName>
                </value>
                <value>
                    <fullName>Russian</fullName>
                </value>
                <value>
                    <fullName>Spanish (Mexico)</fullName>
                </value>
                <value>
                    <fullName>Norwegian</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Portuguese</fullName>
                </value>
                <value>
                    <fullName>Turkish</fullName>
                </value>
                <value>
                    <fullName>Hindi</fullName>
                </value>
                <value>
                    <fullName>Arabic</fullName>
                </value>
                <value>
                    <fullName>Indonesian</fullName>
                </value>
                <value>
                    <fullName>Czech</fullName>
                </value>
                <value>
                    <fullName>Greek</fullName>
                </value>
                <value>
                    <fullName>Polish</fullName>
                </value>
                <value>
                    <fullName>Romanian</fullName>
                </value>
                <value>
                    <fullName>Vietnamese</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSS_Locale__c</fullName>
        <description>Stores the user language in the Account Object</description>
        <label>Locale</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Albanian(Albania)</fullName>
                </value>
                <value>
                    <fullName>Arabic(Algeria)</fullName>
                </value>
                <value>
                    <fullName>Arabic(Bahrain)</fullName>
                </value>
                <value>
                    <fullName>Arabic(Egpyt)</fullName>
                </value>
                <value>
                    <fullName>Arabic(Iraq)</fullName>
                </value>
                <value>
                    <fullName>Arabic(Jordan)</fullName>
                </value>
                <value>
                    <fullName>Arabic(Kuwait)</fullName>
                </value>
                <value>
                    <fullName>Arabic(Lebanon)</fullName>
                </value>
                <value>
                    <fullName>Arabic(Libya)</fullName>
                </value>
                <value>
                    <fullName>Arabic(Morocco)</fullName>
                </value>
                <value>
                    <fullName>Arabic(Oman)</fullName>
                </value>
                <value>
                    <fullName>Arabic(Qatar)</fullName>
                </value>
                <value>
                    <fullName>Arabic(Saudi Arabia)</fullName>
                </value>
                <value>
                    <fullName>Arabic(Sudan)</fullName>
                </value>
                <value>
                    <fullName>Arabic(Syria)</fullName>
                </value>
                <value>
                    <fullName>Arabic(Tunisia)</fullName>
                </value>
                <value>
                    <fullName>Arabic(United Arab Emirates)</fullName>
                </value>
                <value>
                    <fullName>Arabic(Yemen)</fullName>
                </value>
                <value>
                    <fullName>Armenian(Armenia)</fullName>
                </value>
                <value>
                    <fullName>Azerbaijani(Azerbaijan)</fullName>
                </value>
                <value>
                    <fullName>Basque (Spain)</fullName>
                </value>
                <value>
                    <fullName>Belarusian (Belarus)</fullName>
                </value>
                <value>
                    <fullName>Bengali(Bangladesh)</fullName>
                </value>
                <value>
                    <fullName>Bosnian (Bosnia &amp; Herzegovina)</fullName>
                </value>
                <value>
                    <fullName>Bulgarian (Bulgaria)</fullName>
                </value>
                <value>
                    <fullName>Burmese(Myanmar(Burma))</fullName>
                </value>
                <value>
                    <fullName>Catalan(Spain)</fullName>
                </value>
                <value>
                    <fullName>Chinese(China, Pinyin Ordering)</fullName>
                </value>
                <value>
                    <fullName>Chinese(China, Stroke Ordering)</fullName>
                </value>
                <value>
                    <fullName>Chinese(China)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSS_Timezone__c</fullName>
        <description>Stores the timezone of the account Created fro JIT Provisioning</description>
        <label>Timezone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>(GMT+00:00) Azores Summer Time (Atlantic/Azores)</fullName>
                </value>
                <value>
                    <fullName>(GMT+00:00) Eastern Greenland Summer Time (America/Scoresbysund)</fullName>
                </value>
                <value>
                    <fullName>(GMT+00:00) Greenwich Mean Time (GMT)</fullName>
                </value>
                <value>
                    <fullName>(GMT+00:00) Western European Time (Africa/Casablanca)</fullName>
                </value>
                <value>
                    <fullName>(GMT+01:00) British Summer Time (Europe/London)</fullName>
                </value>
                <value>
                    <fullName>(GMT+01:00) Central European Time (Africa/Algiers)</fullName>
                </value>
                <value>
                    <fullName>(GMT+01:00) Irish Summer Time (Europe/Dublin)</fullName>
                </value>
                <value>
                    <fullName>(GMT+01:00) Western European Summer Time (Europe/Lisbon)</fullName>
                </value>
                <value>
                    <fullName>(GMT+02:00) Central European Summer Time (Europe/Amsterdam)</fullName>
                </value>
                <value>
                    <fullName>(GMT+02:00) Central European Summer Time (Europe/Berlin)</fullName>
                </value>
                <value>
                    <fullName>(GMT+02:00) Central European Summer Time (Europe/Brussels)</fullName>
                </value>
                <value>
                    <fullName>(GMT+02:00) Central European Summer Time (Europe/Paris)</fullName>
                </value>
                <value>
                    <fullName>(GMT+02:00) Central European Summer Time (Europe/Prague)</fullName>
                </value>
                <value>
                    <fullName>(GMT+02:00) Central European Summer Time (Europe/Rome)</fullName>
                </value>
                <value>
                    <fullName>(GMT+02:00) Eastern European Time (Africa/Cairo)</fullName>
                </value>
                <value>
                    <fullName>(GMT+02:00) South Africa Standard Time (Africa/Johannesburg)</fullName>
                </value>
                <value>
                    <fullName>(GMT+03:00) Arabia Standard Time (Asia/Baghdad)</fullName>
                </value>
                <value>
                    <fullName>(GMT+03:00) Arabia Standard Time (Asia/Kuwait)</fullName>
                </value>
                <value>
                    <fullName>(GMT+03:00) Arabia Standard Time (Asia/Riyadh)</fullName>
                </value>
                <value>
                    <fullName>(GMT+03:00) Eastern African Time (Africa/Nairobi)</fullName>
                </value>
                <value>
                    <fullName>(GMT+03:00) Eastern European Summer Time (Asia/Beirut)</fullName>
                </value>
                <value>
                    <fullName>(GMT+03:00) Eastern European Summer Time (Europe/Athens)</fullName>
                </value>
                <value>
                    <fullName>(GMT+03:00) Eastern European Summer Time (Europe/Bucharest)</fullName>
                </value>
                <value>
                    <fullName>(GMT+03:00) Eastern European Summer Time (Europe/Helsinki)</fullName>
                </value>
                <value>
                    <fullName>(GMT+03:00) Eastern European Summer Time (Europe/Istanbul)</fullName>
                </value>
                <value>
                    <fullName>(GMT+03:00) Israel Daylight Time (Asia/Jerusalem)</fullName>
                </value>
                <value>
                    <fullName>(GMT+03:00) Moscow Standard Time (Europe/Minsk)</fullName>
                </value>
                <value>
                    <fullName>(GMT+03:00) Moscow Standard Time (Europe/Moscow)</fullName>
                </value>
                <value>
                    <fullName>(GMT+04:00) Armenia Time (Asia/Yerevan)</fullName>
                </value>
                <value>
                    <fullName>(GMT+04:00) Georgia Time (Asia/Tbilisi)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSS_WS_Address_ID_Bill__c</fullName>
        <description>SP MX Address ID Bill</description>
        <label>Address ID Bill</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Address_ID_Ship__c</fullName>
        <description>SP MX Address ID Ship</description>
        <label>Address ID Ship</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Anual_Recert_Date__c</fullName>
        <description>SP MX Anual Recert Date</description>
        <label>Anual Recert Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Campaign_TRP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SP MX Campaign TRP Flag</description>
        <label>Campaign TRP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Channel_Code__c</fullName>
        <label>Channel Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Channel_of_Distribution__c</fullName>
        <label>Channel of Distribution</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Claim_Allow_Days__c</fullName>
        <defaultValue>0</defaultValue>
        <description>SP MX Claim Allow Days</description>
        <label>Claim Allow Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Currency__c</fullName>
        <description>SP MX Currency</description>
        <label>Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Customer_ID__c</fullName>
        <description>SP MX Customer ID</description>
        <label>Customer ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Cut_Off_Claim__c</fullName>
        <defaultValue>0</defaultValue>
        <description>SP MX Cut Off Claim Flag</description>
        <label>Cut Off Claim</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_DSID__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SP MX DSID Flag</description>
        <label>DSID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Max_Claim_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Max Claim Amount Flag</description>
        <label>Max Claim Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Paccar_DLR_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SP MX Paccar Flag</description>
        <label>Paccar DLR Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Product_Certification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SP MX Product Certification</description>
        <label>Product Certification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Promotion_ID__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SP MX Promotion ID</description>
        <label>Promotion ID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Region_Code__c</fullName>
        <description>SP MX Region Code</description>
        <label>Region Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Region_Name__c</fullName>
        <description>SP MX Region Name</description>
        <label>Region Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Territory_Code__c</fullName>
        <label>Territory Code</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Territory_Name__c</fullName>
        <description>CSS WS SP Territory Name</description>
        <label>Territory Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Transfer_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CSS WS Transfer Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSS_WS_View_Amount__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SP MX View Amount</description>
        <label>View Amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Warranty_Train_Cert__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SP MX Warranty Training Certification</description>
        <label>Warranty Train Cert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Claim_Allowed_Days__c</fullName>
        <label>Claim_Allowed_Days</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Communication_Method__c</fullName>
        <label>Communication_Method</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Communication_Occurrence__c</fullName>
        <label>Communication_Occurrence</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Communication_Triggers__c</fullName>
        <description>Contact&apos;s preferred communications</description>
        <label>Communication Triggers</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Equipment Available</fullName>
                </value>
                <value>
                    <fullName>Troubleshooting Started</fullName>
                </value>
                <value>
                    <fullName>Authorized Work Started</fullName>
                </value>
                <value>
                    <fullName>Service Work Completed</fullName>
                </value>
                <value>
                    <fullName>Invoice Ready</fullName>
                </value>
                <value>
                    <fullName>Equipment Ready For Pick Up</fullName>
                </value>
                <value>
                    <fullName>Service Work Proceeding</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cost_Effective_Exclusion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cost_Effective_Exclusion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Currency_code__c</fullName>
        <label>Currency code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_BMS_number__c</fullName>
        <formula>IF(!ISBLANK( BMS_Customer_ID_Junction__c ) , BMS_Customer_ID_Junction__c , BMS_Customer_ID__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer BMS number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Data_Last_Transfer__c</fullName>
        <label>Customer Data Last Transfer</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Customer_Data_Receive_from_CSS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Data Receive from CSS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Data_Send_to_CSS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Data Send to CSS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Location_Code__c</fullName>
        <label>Customer Location Code</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cut_Off_Claim_Amt__c</fullName>
        <label>Cut_Off_Claim_Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DIST_HQ_CODE__c</fullName>
        <label>DIST_HQ_CODE</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DIST_HQ_NAME__c</fullName>
        <label>DIST_HQ_NAME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSID__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DSID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DTNA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DTNA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Exchange_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Data Exchange Enabled?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_Web_Access_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable_Web_Access_Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Distributor_Billing_Address__c</fullName>
        <formula>Parent.CMI_Billing_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Distributor Billing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EBU_Channel_of_Distribution__c</fullName>
        <label>EBU Channel of Distribution</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AFFILIATE SALES ASSOCIA</fullName>
                    <isActive>false</isActive>
                    <label>AFFILIATE SALES ASSOCIA</label>
                </value>
                <value>
                    <fullName>AFFILIATE SALES ASSOCIATE</fullName>
                </value>
                <value>
                    <fullName>BUS OEM</fullName>
                </value>
                <value>
                    <fullName>BUS - OTHER</fullName>
                </value>
                <value>
                    <fullName>CAREER CENTERS</fullName>
                </value>
                <value>
                    <fullName>CIHR</fullName>
                </value>
                <value>
                    <fullName>CONTRACTED ALTERNATOR SP</fullName>
                </value>
                <value>
                    <fullName>DEALER</fullName>
                </value>
                <value>
                    <fullName>DISTRIBUTOR-BRANCH</fullName>
                </value>
                <value>
                    <fullName>DISTRIBUTOR-HEADQUARTERS</fullName>
                </value>
                <value>
                    <fullName>END USER</fullName>
                </value>
                <value>
                    <fullName>EXPORT HOUSE</fullName>
                </value>
                <value>
                    <fullName>FEDERAL GOVERNMENT</fullName>
                </value>
                <value>
                    <fullName>FILTRATION DEALER</fullName>
                </value>
                <value>
                    <fullName>FILTRATION HEADQUARTER</fullName>
                </value>
                <value>
                    <fullName>FLEET</fullName>
                </value>
                <value>
                    <fullName>FLEETGUARD DEALER</fullName>
                    <isActive>false</isActive>
                    <label>FLEETGUARD DEALER</label>
                </value>
                <value>
                    <fullName>FLEETGUARD DISTRIBUTOR</fullName>
                    <isActive>false</isActive>
                    <label>FLEETGUARD DISTRIBUTOR</label>
                </value>
                <value>
                    <fullName>FLEETGUARD HEAD QUARTER</fullName>
                    <isActive>false</isActive>
                    <label>FLEETGUARD HEAD QUARTER</label>
                </value>
                <value>
                    <fullName>FUEL SYSTEMS ASSOCIATE</fullName>
                </value>
                <value>
                    <fullName>FUEL SYSTEMS SPECIALIST</fullName>
                </value>
                <value>
                    <fullName>GOEM</fullName>
                    <isActive>false</isActive>
                    <label>GOEM</label>
                </value>
                <value>
                    <fullName>HOLSET - DEALER</fullName>
                </value>
                <value>
                    <fullName>HOLSET - DISTRIBUTOR</fullName>
                </value>
                <value>
                    <fullName>HOLSET - HEAD QUARTER</fullName>
                </value>
                <value>
                    <fullName>INDEPENDENT AFTER MARKET</fullName>
                </value>
                <value>
                    <fullName>INDUSTRIAL/VOCATIONAL</fullName>
                </value>
                <value>
                    <fullName>MAJOR LEASING CO. ACCTS.</fullName>
                    <isActive>false</isActive>
                    <label>MAJOR LEASING CO. ACCTS.</label>
                </value>
                <value>
                    <fullName>NATIONAL ACCOUNT-REFUSE</fullName>
                </value>
                <value>
                    <fullName>NATIONAL ACCT_CIHR - HQ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EDS_Workgroup_Name__c</fullName>
        <description>Workgroup Name set in EDS</description>
        <label>EDS Workgroup Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_System__c</fullName>
        <label>ERP System</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>BMS Legacy</fullName>
                </value>
                <value>
                    <fullName>MoveX</fullName>
                </value>
                <value>
                    <fullName>No ERP System</fullName>
                    <default>true</default>
                    <label>No ERP System</label>
                </value>
                <value>
                    <fullName>One BMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESN_Service_History_Last_Data_Transfer__c</fullName>
        <label>ESN Service History Last Data Transfer</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ESN_Service_History_Send_to_CSS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ESN Service History Send to CSS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Notification_Frequency__c</fullName>
        <label>Email Notification Frequency​</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Real-Time</fullName>
                </value>
                <value>
                    <fullName>Nightly</fullName>
                </value>
                <value>
                    <fullName>Never/Unsubscribed​</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Enable_Claims__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Claims</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>